# serialization

./: .gitignore  CMakeLists.txt  README.md
example/: example.cpp
include/serialization/: serialization.h
src/: Test.cpp  Test.h
